# arsenic_cmake

./: CMakeLists.txt  Dockerfile  README.md  build.sh  build2.sh
.github/workflows/: archlinux.yml  build_archlinux.yml  build_arsenic.yml  build_ubuntu.yml  build_windows.yml  github_workflows_build-botan.yml  github_workflows_build.yml
cmake/: FindBotan.cmake
share/archlinux_pkgbuild/: PKGBUILD
src/: CMakeLists.txt  hashcheckdialog.cpp  mainwindow.cpp  passwordGeneratorDialog.cpp  passwordGeneratorDialog.h  rsc.qrc
src/arscore/: CMakeLists.txt  CryptoThread.cpp  consts.h  passwordGenerator.cpp  simplecryptoengine.cpp  simplecryptoengine.h  textcrypto.cpp  triplecryptoengine.cpp  triplecryptoengine.h
src/languages/: arsenic_fr_FR.ts
